--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Title Generator</string>
     <string name="action_settings">Settings</string>
-    <string name="word_count">Words: %d</string>
-    <string name="title_words">title words</string>
     <string name="form_X">%s</string>
     <string name="form_X_Y">%s %s</string>
     <string name="form_X__Y">%s: %s</string>
@@ -15,5 +13,7 @@
     <string name="category_thing">Thing</string>
     <string name="category_actor_and_action">Actor &amp; Action</string>
     <string name="category_PlaceAndTime">Place &amp; Time</string>
-    <string name="title_number">%d)</string>
+    <string name="titleNumber">%d)</string>
+    <string name="titleCount">Title Count: %d</string>
+    <string name="totalWordCount">Words in Total: %d</string>
 </resources>
