--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Title Generator</string>
-    <string name="action_settings">Settings</string>
     <string name="form_X">%s</string>
     <string name="form_X_Y">%s %s</string>
     <string name="form_X__Y">%s: %s</string>
@@ -23,6 +22,6 @@
     <string name="toggleTitleForms">Toggle Title Decorations</string>
     <string name="action_displayAll">Display All Categories</string>
     <string name="action_displayCategory">> %s</string>
-    <string name="action_customTemplate">Toggle Custom Template</string>
+    <string name="action_customTemplate">Custom Template</string>
     <string name="customTemplateExample"># Example: # #</string>
 </resources>
