--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="form_X">%s</string>
     <string name="form_X_Y">%s %s</string>
     <string name="form_X__Y">%s: %s</string>
-    <string name="form_X_of_Y" translatable="false">%s of %s</string>
+    <string name="form_X_of_Y">%s of %s</string>
     <string name="form_X_of_the_Y">%s of the %s</string>
     <string name="form_X_and_Y">%s and %s</string>
     <string name="form_X_and_the_Y">%s and the %s</string>
@@ -24,4 +24,40 @@
     <string name="action_displayCategory">> %s</string>
     <string name="action_customTemplate">Custom Template</string>
     <string name="customTemplateExample"># Example: # #</string>
+    <string name="str_the">The</string>
+    <string name="str_ERROR">[ERROR]</string>
+    <string name="function_word">#</string>
+    <string name="function_mutatorBlockStart">(</string>
+    <string name="function_mutatorBlockEnd">)</string>
+    <string name="function_singular">-</string>
+    <string name="function_plural1">+</string>
+    <string name="function_plural2">s</string>
+    <string name="function_uppercase">A</string>
+    <string name="function_lowercase">a</string>
+    <string name="function_initialism">.</string>
+    <string name="function_nominative">n</string>
+    <string name="function_infinitive1">i</string>
+    <string name="function_infinitive2">in</string>
+    <string name="function_pastTense1">d</string>
+    <string name="function_pastTense2">ed</string>
+    <string name="function_negative1">u</string>
+    <string name="function_negative2">un</string>
+    <string name="function_possessive">\'</string>
+    <string name="function_emptyChance1">x</string>
+    <string name="function_copyAllMutators">=</string>
+    <string name="function_copyNonCatMutators">#</string>
+    <string name="function_copyCategory">c</string>
+    <string name="function_chainMutators">|</string>
+    <string name="function_catAny1">0</string>
+    <string name="function_catAny2">*</string>
+    <string name="function_catFeature1">1</string>
+    <string name="function_catFeature2">ft</string>
+    <string name="function_catConcept1">2</string>
+    <string name="function_catConcept2">co</string>
+    <string name="function_catThing1">3</string>
+    <string name="function_catThing2">th</string>
+    <string name="function_catActorAndAction1">4</string>
+    <string name="function_catActorAndAction2">ac</string>
+    <string name="function_catPlaceAndTime1">5</string>
+    <string name="function_catPlaceAndTime2">pt</string>
 </resources>
