--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="category_feature">Feature</string>
     <string name="category_concept">Concept</string>
     <string name="category_thing">Thing</string>
-    <string name="category_actorAndAction">Actor &amp; Action</string>
     <string name="category_placeAndTime">Place &amp; Time</string>
     <string name="titleNumber">%d)</string>
     <string name="titleCount">Title Count: %d</string>
@@ -54,8 +53,23 @@
     <string name="function_catConcept2">co</string>
     <string name="function_catThing1">3</string>
     <string name="function_catThing2">th</string>
-    <string name="function_catActorAndAction1">4</string>
-    <string name="function_catActorAndAction2">ac</string>
-    <string name="function_catPlaceAndTime1">5</string>
+    <string name="function_catPeopleAndCreatures1">4</string>
+    <string name="function_catPeopleAndCreatures2">pc</string>
+    <string name="function_catAction1">5</string>
+    <string name="function_catAction2">ac</string>
+    <string name="function_catPlaceAndTime1">6</string>
     <string name="function_catPlaceAndTime2">pt</string>
+    <string name="number_0">0</string>
+    <string name="number_1">1</string>
+    <string name="number_2">2</string>
+    <string name="number_3">3</string>
+    <string name="number_4">4</string>
+    <string name="number_5">5</string>
+    <string name="number_6">6</string>
+    <string name="number_7">7</string>
+    <string name="number_8">8</string>
+    <string name="number_9">9</string>
+    <string name="number_10">10</string>
+    <string name="category_peopleAndCreatures">People &amp; Creatures</string>
+    <string name="category_action">Action</string>
 </resources>
