--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,25 @@
 <resources>
     <string name="app_name">Title Generator</string>
-    <string name="form_X">%s</string>
-    <string name="form_X_Y">%s %s</string>
-    <string name="form_X__Y">%s: %s</string>
-    <string name="form_X_of_Y">%s of %s</string>
-    <string name="form_X_of_the_Y">%s of the %s</string>
-    <string name="form_X_and_Y">%s and %s</string>
-    <string name="form_X_and_the_Y">%s and the %s</string>
-    <string name="form_Xs_Y">%s\'s %s</string>
+    <string name="form_X__Y">": "</string>
+    <string name="form_X_of_Y">" of "</string>
+    <string name="form_X_of_the_Y">" of the "</string>
+    <string name="form_X_and_Y">" and "</string>
+    <string name="form_X_and_the_Y">" and the "</string>
+    <string name="form_Xs_Y">"'s "</string>
     <string name="category_feature">Feature</string>
     <string name="category_concept">Concept</string>
     <string name="category_thing">Thing</string>
     <string name="category_placeAndTime">Place &amp; Time</string>
     <string name="titleNumber">%d)</string>
-    <string name="titleCount">Title Count: %d</string>
-    <string name="titleWordCount">Words in a Title: %d</string>
-    <string name="totalWordCount">Words in Total: %d</string>
-    <string name="action_titleDecorations">Title Decorations</string>
-    <string name="action_displayAll">Display All Categories</string>
-    <string name="action_displayCategory">> %s</string>
+    <string name="titleCount">Title count: %d</string>
+    <string name="titleWordCount">Words in a title: %d</string>
+    <string name="totalWordCount">Words in total: %d</string>
+    <string name="action_titleDecorations">Title decorations</string>
+    <string name="action_displayAll">Display all categories</string>
+    <string name="action_displayCategory">> %s (%s)</string>
     <string name="action_customTemplate">Custom Template</string>
-    <string name="customTemplate_on">Custom Template On</string>
-    <string name="customTemplate_off">Custom Template Off</string>
+    <string name="customTemplate_on">Custom template ON</string>
+    <string name="customTemplate_off">Custom template OFF</string>
     <string name="customTemplateExample"># Example: # #</string>
     <string name="str_the">The</string>
     <string name="str_ERROR">[ERROR]</string>
@@ -72,4 +70,13 @@
     <string name="number_10">10</string>
     <string name="category_peopleAndCreatures">People &amp; Creatures</string>
     <string name="category_action">Action</string>
+    <string name="action_randomTitleLength">Random title length</string>
+    <string name="category_action_short">ac</string>
+    <string name="category_placeAndTime_short">pt</string>
+    <string name="category_peopleAndCreatures_short">pc</string>
+    <string name="category_concept_short">co</string>
+    <string name="category_feature_short">ft</string>
+    <string name="category_thing_short">th</string>
+    <string name="form_X__The_Y">": The "</string>
+    <string name="form_Xs_Y2">"' "</string>
 </resources>
