Added Substance category to code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,18 @@
     <string name="form_Xs_Y">"'s "</string>
     <string name="category_feature">Feature</string>
     <string name="category_concept">Concept</string>
+    <string name="category_substance">Substance</string>
     <string name="category_thing">Thing</string>
+    <string name="category_peopleAndCreatures">People &amp; Creatures</string>
+    <string name="category_action">Action</string>
     <string name="category_placeAndTime">Place &amp; Time</string>
+    <string name="category_feature_short">ft</string>
+    <string name="category_concept_short">co</string>
+    <string name="category_substance_short">su</string>
+    <string name="category_thing_short">th</string>
+    <string name="category_peopleAndCreatures_short">pc</string>
+    <string name="category_action_short">ac</string>
+    <string name="category_placeAndTime_short">pt</string>
     <string name="titleNumber">%d)</string>
     <string name="titleCount">Title count: %d</string>
     <string name="titleWordCount">Words in a title: %d</string>
@@ -45,18 +55,6 @@
     <string name="function_chainMutators">|</string>
     <string name="function_catAny1">0</string>
     <string name="function_catAny2">*</string>
-    <string name="function_catFeature1">1</string>
-    <string name="function_catFeature2">ft</string>
-    <string name="function_catConcept1">2</string>
-    <string name="function_catConcept2">co</string>
-    <string name="function_catThing1">3</string>
-    <string name="function_catThing2">th</string>
-    <string name="function_catPeopleAndCreatures1">4</string>
-    <string name="function_catPeopleAndCreatures2">pc</string>
-    <string name="function_catAction1">5</string>
-    <string name="function_catAction2">ac</string>
-    <string name="function_catPlaceAndTime1">6</string>
-    <string name="function_catPlaceAndTime2">pt</string>
     <string name="number_0">0</string>
     <string name="number_1">1</string>
     <string name="number_2">2</string>
@@ -68,15 +66,7 @@
     <string name="number_8">8</string>
     <string name="number_9">9</string>
     <string name="number_10">10</string>
-    <string name="category_peopleAndCreatures">People &amp; Creatures</string>
-    <string name="category_action">Action</string>
     <string name="action_randomTitleLength">Random title length</string>
-    <string name="category_action_short">ac</string>
-    <string name="category_placeAndTime_short">pt</string>
-    <string name="category_peopleAndCreatures_short">pc</string>
-    <string name="category_concept_short">co</string>
-    <string name="category_feature_short">ft</string>
-    <string name="category_thing_short">th</string>
     <string name="form_X__The_Y">": The "</string>
     <string name="form_Xs_Y2">"' "</string>
 </resources>
