--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,18 +36,22 @@
     <string name="function_word">#</string>
     <string name="function_mutatorBlockStart">(</string>
     <string name="function_mutatorBlockEnd">)</string>
-    <string name="function_singular">-</string>
     <string name="function_plural1">+</string>
     <string name="function_plural2">s</string>
     <string name="function_uppercase">A</string>
     <string name="function_lowercase">a</string>
     <string name="function_initialism">.</string>
-    <string name="function_nominative">n</string>
+    <string name="function_noun">n</string>
     <string name="function_infinitive1">i</string>
     <string name="function_infinitive2">in</string>
+    <string name="function_presentTense">pr</string>
     <string name="function_pastTense1">d</string>
     <string name="function_pastTense2">ed</string>
+    <string name="function_pastPerfectTense">pp</string>
     <string name="function_possessive">\'</string>
+    <string name="function_comparative">></string>
+    <string name="function_superlative">>></string>
+    <string name="function_manner">m</string>
     <string name="function_emptyChance1">x</string>
     <string name="function_copyAllMutators">=</string>
     <string name="function_copyNonCatMutators">#</string>
