--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="category_personAndCreature">Person &amp; Creature</string>
     <string name="category_action">Action</string>
     <string name="category_placeAndTime">Place &amp; Time</string>
+    <string name="category_conAndPrepos">Conjunction &amp; Preposition</string>
     <string name="category_kind_short">ki</string>
     <string name="category_concept_short">co</string>
     <string name="category_substance_short">su</string>
@@ -20,6 +21,7 @@
     <string name="category_personAndCreature_short">pc</string>
     <string name="category_action_short">ac</string>
     <string name="category_placeAndTime_short">pt</string>
+    <string name="category_conAndPrepos_short">cp</string>
     <string name="titleNumber">%d)</string>
     <string name="titleCount">Title count: %d</string>
     <string name="titleWordCount">Words in a title: %d</string>
@@ -39,11 +41,12 @@
     <string name="customTemplateExample4">#(th, +) of #(su)</string>
     <string name="customTemplateExample5">#(ki, >>) #(th)</string>
     <string name="customTemplateExample6">#(+) and #(=)</string>
-    <string name="customTemplateExample7">##(ac, n, a)</string>
-    <string name="customTemplateExample8">#(pc) #(ac, pr) #(*, +, x)</string>
-    <string name="customTemplateExample9">#(ki, ly) #(ac, ed)</string>
-    <string name="customTemplateExample10">The #(pt) of the #(ac, pp)</string>
-    <string name="customTemplateExample11">#(ac, ing, x) Without #(ac, er, x) #(co, ~)</string>
+    <string name="customTemplateExample7">##(ac, a)</string>
+    <string name="customTemplateExample8">#(ki, ly) #(ac, ed)</string>
+    <string name="customTemplateExample9">#(cp) the #(pc, +) #(ac, n)</string>
+    <string name="customTemplateExample10">#(pc) #(ac, pr) #(*, +, x)</string>
+    <string name="customTemplateExample11">The #(pt) of the #(ac, pp)</string>
+    <string name="customTemplateExample12">#(ac, ing, x) Without #(ac, er, x) #(co, ~)</string>
     <string name="str_the">The</string>
     <string name="str_ERROR">[ERROR]</string>
     <string name="function_word">#</string>
