Refactored category selection and fixed a bug with custom template activation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,8 +86,7 @@
     <string name="function_copyNonCatMutators">#</string>
     <string name="function_copyCategory">c</string>
     <string name="function_mutatorSeparator">,</string>
-    <string name="function_catAny1">0</string>
-    <string name="function_catAny2">*</string>
+    <string name="function_catAny">*</string>
     <string name="number_0">0</string>
     <string name="number_1">1</string>
     <string name="number_2">2</string>
