--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="customTemplateExample6">#(+) and #(=)</string>
     <string name="customTemplateExample7">##(ac, n, a)</string>
     <string name="customTemplateExample8">#(ki, ly) #(ac, ed)</string>
-    <string name="customTemplateExample9">#(ac, pp, on) #(co)</string>
+    <string name="customTemplateExample9">#(ac, pp, pre) #(co)</string>
     <string name="customTemplateExample10">#(cp) the #(pc, +) #(ac, n)</string>
     <string name="customTemplateExample11">#(pc) #(ac, pr) #(*, +, x)</string>
     <string name="customTemplateExample12">The #(pt) of the #(ac, pp)</string>
@@ -68,7 +68,7 @@
     <string name="function_initialism">.</string>
     <string name="function_reverse">r</string>
     <string name="function_jumble1">j</string>
-    <string name="function_jumble2">\?</string>
+    <string name="function_jumble2">\!</string>
     <string name="function_noun">n</string>
     <string name="function_presentParticiple">ing</string>
     <string name="function_presentTense">pr</string>
@@ -77,7 +77,8 @@
     <string name="function_pastPerfectTense">pp</string>
     <string name="function_actor">er</string>
     <string name="function_possessive">\'</string>
-    <string name="function_preposition">on</string>
+    <string name="function_preposition1">pre</string>
+    <string name="function_preposition2">on</string>
     <string name="function_comparative">></string>
     <string name="function_superlative">>></string>
     <string name="function_manner">ly</string>
@@ -86,6 +87,7 @@
     <string name="function_copyNonCatMutators">&amp;</string>
     <string name="function_copyCategory">c</string>
     <string name="function_copyWord">#</string>
+    <string name="function_randomForm">\?</string>
     <string name="function_mutatorSeparator">,</string>
     <string name="function_catAny">*</string>
     <string name="number_0">0</string>
