Added a Help button and refactored title count selection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,11 +32,13 @@
     <string name="titleWordCount">Words in a title: %d</string>
     <string name="totalWordCount">Words in total: %d</string>
     <string name="untitled">Untitled</string>
+    <string name="action_help">Help</string>
     <string name="action_titleDecorations">Title decorations</string>
     <string name="action_randomTitleLength">Random title length</string>
     <string name="action_displayAll">Display all categories</string>
     <string name="action_displayCategory">> %s (%s)</string>
     <string name="action_customTemplate">Custom Template</string>
+    <string name="action_customTemplateHint">Custom template text box. Write # to get a random word in its place.</string>
     <string name="action_exampleTemplates">Custom Template Examples</string>
     <string name="customTemplate_on">Custom template ON</string>
     <string name="customTemplate_off">Custom template OFF</string>
