--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">Title Generator</string>
+    <string name="title_activity_help">Help</string>
     <string name="form_X__Y">": "</string>
     <string name="form_X__The_Y">": The "</string>
     <string name="form_X_of_Y">" of "</string>
     <string name="form_X_of_the_Y">" of the "</string>
     <string name="form_X_and_Y">" and "</string>
     <string name="form_X_and_the_Y">" and the "</string>
-    <string name="form_Xs_Y">"'s "</string>
-    <string name="form_Xs_Y2">"' "</string>
+    <string name="form_Xs_Y">"\'s "</string>
+    <string name="form_Xs_Y2">"\' "</string>
     <string name="category_all">All</string>
     <string name="category_kind">Kind</string>
     <string name="category_concept">Concept</string>
@@ -32,14 +33,13 @@
     <string name="titleWordCount">Word count cap: %d</string>
     <string name="totalWordCount">Words in total: %d</string>
     <string name="untitled">Untitled</string>
-    <string name="action_help">Help</string>
     <string name="action_titleDecorations">Title decorations</string>
     <string name="action_randomTitleLength">Random word count</string>
     <string name="action_displayAll">Display all categories</string>
     <string name="action_displayCategory">> %s (%s)</string>
-    <string name="action_customTemplate">Custom Template</string>
-    <string name="action_customTemplateHint">Custom title template. #s are turned into random words.</string>
-    <string name="action_exampleTemplates">Custom Template Examples</string>
+    <string name="action_customTemplate">Custom template</string>
+    <string name="action_customTemplateHint">Custom template. # marks a word.</string>
+    <string name="action_exampleTemplates">Custom template examples</string>
     <string name="customTemplate_on">Custom template ON</string>
     <string name="customTemplate_off">Custom template OFF</string>
     <string name="customTemplateExample0">Example #: #</string>
@@ -62,35 +62,34 @@
     <string name="function_word">#</string>
     <string name="function_mutatorBlockStart">(</string>
     <string name="function_mutatorBlockEnd">)</string>
-    <string name="function_plural1">+</string>
-    <string name="function_plural2">s</string>
-    <string name="function_pluralChance">~</string>
+    <string name="function_mutatorSeparator">,</string>
     <string name="function_uppercase">A</string>
     <string name="function_lowercase">a</string>
     <string name="function_initialism">.</string>
     <string name="function_reverse">r</string>
     <string name="function_jumble1">j</string>
     <string name="function_jumble2">\!</string>
-    <string name="function_noun">n</string>
-    <string name="function_presentParticiple">ing</string>
-    <string name="function_presentTense">pr</string>
-    <string name="function_pastTense1">d</string>
-    <string name="function_pastTense2">ed</string>
-    <string name="function_pastPerfectTense">pp</string>
-    <string name="function_actor">er</string>
     <string name="function_possessive">\'</string>
-    <string name="function_preposition1">pre</string>
-    <string name="function_preposition2">on</string>
+    <string name="function_plural1">+</string>
+    <string name="function_plural2">s</string>
+    <string name="function_pluralChance">~</string>
     <string name="function_comparative">></string>
     <string name="function_superlative">>></string>
     <string name="function_manner">ly</string>
-    <string name="function_emptyChance1">x</string>
-    <string name="function_copyAllMutators">=</string>
-    <string name="function_copyNonCatMutators">&amp;</string>
-    <string name="function_copyCategory">c</string>
-    <string name="function_copyWord">#</string>
+    <string name="function_presentParticiple">ing</string>
+    <string name="function_pastTense1">d</string>
+    <string name="function_pastTense2">ed</string>
+    <string name="function_pastPerfectTense">pp</string>
+    <string name="function_noun">n</string>
+    <string name="function_presentTense">pr</string>
+    <string name="function_actor">er</string>
+    <string name="function_preposition">pre</string>
     <string name="function_randomForm">\?</string>
-    <string name="function_mutatorSeparator">,</string>
+    <string name="function_emptyChance1">x</string>
+    <string name="function_copyWord">#</string>
+    <string name="function_copyCategory">c</string>
+    <string name="function_copyNonCatMutators">&amp;</string>
+    <string name="function_copyAllMutators">=</string>
     <string name="function_catAny">*</string>
     <string name="number_0">0</string>
     <string name="number_1">1</string>
@@ -103,4 +102,78 @@
     <string name="number_8">8</string>
     <string name="number_9">9</string>
     <string name="number_10">10</string>
+    <string name="help_text">
+        "\nGeneral"
+
+        "\n\nPress the button on the lower right corner of the screen to" <b>"generate new"
+        "titles."</b> "The chosen category affects which words will appear. You can see the"
+        "displayed category on the top of the screen. You can change it, along with many other"
+        "things, in the dropdown menu at the upper right corner of the screen."
+
+        "\n\nPress the Custom template button next to the title generation button to activate the"
+        <b>"custom template"</b> "mode:"
+        "\nWrite something in the text field which has now appeared and generate new titles to see"
+        "all of the titles become what you wrote. Add a" <b>"hash #"</b> "into the text and"
+        "generate new titles; a random word has appeared to that place in each title."
+
+        <b>"\n\nMutators"</b> "are short codes which allow you to customize words' forms and"
+        "properties and limit what kind of words you'll get. Add parentheses right after a hash #"
+        "and, within them, write any of the mutators listed below to control what kind of word"
+        "you\'ll get. You can have any number of mutators for a word; separate them with a comma."
+        "Words without a category mutator will obey the displayed category."
+        <i>"\nExample: The #(pc, +) of the #"</i>
+
+        "\n\nCategory mutators"
+
+        "\n\nAll categories:" <b>"0"</b> "or" <b>"*"</b>
+        "\nKind (adjectives):" <b>"1"</b> "or" <b>"ki"</b>
+        "\nConcept:" <b>"2"</b> "or" <b>"co"</b>
+        "\nSubstance:" <b>"3"</b> "or" <b>"su"</b>
+        "\nThing:" <b>"4"</b> "or" <b>"th"</b>
+        "\nPerson &amp; Creature:" <b>"5"</b> "or" <b>"pc"</b>
+        "\nAction (verbs):" <b>"6"</b> "or" <b>"ac"</b>
+        "\nPlace &amp; Time:" <b>"7"</b> "or" <b>"pt"</b>
+        "\nGrammatical particle:" <b>"8"</b> "or" <b>"gp"</b>
+
+        "\n\nOther mutators"
+
+        "\n\nChain mutators together:" <b>","</b>
+        "\nUppercase:" <b>"A"</b>
+        "\nLowercase:" <b>"a"</b>
+        "\nAcronym:" <b>"."</b>
+        "\nReverse:" <b>"r"</b>
+        "\nJumble the word\'s letters:" <b>"j"</b> "or" <b>"\!"</b>
+        "\nPossessive:" <b>"\'"</b>
+        "\nPlural:" <b>"+"</b> "or" <b>"s"</b>
+        "\nOptional plural (50 % chance):" <b>"~"</b>
+        "\nComparative (Kind):" <b>>"</b>
+        "\nSuperlative (Kind):" <b>>>"</b>
+        "\nManner (Kind):" <b>"ly"</b>
+        "\nPresent participle (Action):" <b>"ing"</b>
+        "\nPresent tense (Action):" <b>"pr"</b>
+        "\nPast tense (Action):" <b>"ed"</b> "or" <b>"d"</b>
+        "\nPast perfect tense (Action):" <b>"pp"</b>
+        "\nNoun (Action):" <b>"n"</b>
+        "\nActor (Concept and Action):" <b>"er"</b>
+        "\nPreposition:" <b>"pre"</b>
+        "\nRandom word form:" <b>"\?"</b>
+        "\nOptional word (50 % chance):" <b>"x"</b>
+        "\nCopy previous word:" <b>"#"</b>
+        "\nCopy previous word\'s category:" <b>"c"</b>
+        "\nCopy non-category mutators*:" <b>"&amp;"</b>
+        "\nCopy all mutators*:" <b>"="</b>
+
+        "\n\n*The copy mutators (#, c, &amp;, =) and the optional word mutator (x) won\'t be copied."
+
+        "\n\nCustom template examples"
+
+        "\n\nTo ease the learning of the custom template system, there are some ready-made"
+        "templates for you to use. Open the" <b>"Custom template examples"</b> "submenu from the"
+        "dropdown menu and select an option there. You\'ll see titles tailored to that template and"
+        "you can also edit it to your liking.\n\n"
+    </string>
+    <string name="credits_text">
+        "Designed and developed by Lauri Kosonen"
+    </string>
+    <string name="action_settings">Settings</string>
 </resources>
